[package]
name = "callisto-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.15.0"
midly = { version = "0.5.3", default-features = false, features = [
    "std",
    "alloc",
] }
thiserror = "2.0.12"
raug = { path = "../../../raug" }


[dev-dependencies]
annotate-snippets = "0.11.5"
